--- a/style.css
+++ b/style.css
@@ -44,6 +44,12 @@ body {
     text-align: center;
 }
 
+.header img {
+    border: 1.5px solid #505050;
+    border-radius: 50%;
+    margin-bottom: 10px;
+}
+
 .header h1 {
     font-weight: 700;
     font-size: 32px;
